# MidiControllerControllerApp

./: .gitignore  DESIGN.md  README.md  TODOS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: plan.md
src/: App.svelte  App.test.ts  Sidebar.svelte  TitleBar.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  error.rs  firmware.rs  lib.rs  logging.rs  main.rs  state.rs  wire_e2e.rs
src-tauri/src/protocol/: codec.rs  mod.rs
src-tauri/src/transport/: mock.rs  mod.rs  registry.rs  serial.rs  usb.rs  wifi.rs
src/lib/: app.ts  dialog.ts  errors.ts  presets.test.ts  presets.ts  protocol.test.ts  protocol.ts  stores.ts  theme.ts  transport.test.ts  transport.ts  window.ts
src/routes/: Appearance.svelte  Appearance.test.ts  Configure.svelte  Configure.test.ts  Connect.svelte  Connect.test.ts  Control.svelte  Control.test.ts  Firmware.svelte  Firmware.test.ts  JsonView.svelte  JsonView.test.ts  Logs.svelte  Logs.test.ts  Wifi.svelte  Wifi.test.ts
