[package]
name = "midicontroller-controller-app"
version = "0.1.0"
description = "Native desktop controller app for the MidiController"
authors = ["Aaron Watkins"]
edition = "2021"
rust-version = "1.77"

# The library holds all the app logic so it can also target mobile later.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.3"
nusb = "0.1"
futures-lite = "2"
thiserror = "1"
anyhow = "1"
log = "0.4"
mdns-sd = "0.20"
sysinfo = "0.33"
tauri-plugin-dialog = "2.0.0-rc.8"
fern = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
toml = "0.8"

[features]
# DO NOT REMOVE: used by `tauri build`.
custom-protocol = ["tauri/custom-protocol"]
